arch/nrf5x: Remove board config tokens, replace with a board name config value

--- a/arch/nrf5x/board/Makefile
+++ b/arch/nrf5x/board/Makefile
@@ -1,10 +1,3 @@
-objs-$(CONFIG_NRF5X_PCA10000) += pca10000.o
-objs-$(CONFIG_NRF5X_PCA10005) += pca10005.o
-objs-$(CONFIG_NRF5X_PCA10024) += pca10024.o
-objs-$(CONFIG_NRF5X_PCA20002) += pca20002.o
-objs-$(CONFIG_NRF5X_PCA20006) += pca20006.o
-objs-$(CONFIG_NRF5X_PCA10028) += pca10028.o
-objs-$(CONFIG_NRF5X_PCA10031) += pca10031.o
-objs-$(CONFIG_NRF5X_PCA10036) += pca10036.o
-objs-$(CONFIG_NRF5X_PCA10040) += pca10040.o
-objs-$(CONFIG_NRF5X_TINYBLE) += tiny_ble.o
+ifneq ($(CONFIG_NRF5X_BOARD_NAME),)
+objs += $(CONFIG_NRF5X_BOARD_NAME).o
+endif
