--- a/arch/nrf5x/board/board.config
+++ b/arch/nrf5x/board/board.config
@@ -1,49 +1,5 @@
-%config CONFIG_NRF5X_PCA10000
-  desc Support for nRF51 development kit USB dongle
-  parent CONFIG_ARCH_NRF51
-%config end
-
-%config CONFIG_NRF5X_PCA10005
-  desc Support for nRF51822-DK with SMA connector
-  parent CONFIG_ARCH_NRF51
-%config end
-
-%config CONFIG_NRF5X_PCA10024
-  desc Support for nRF51822-mKIT
-  parent CONFIG_ARCH_NRF51
-%config end
-
-%config CONFIG_NRF5X_PCA20002
-  desc Support for nRF51 Smart Remote module
-  parent CONFIG_ARCH_NRF51
-%config end
-
-%config CONFIG_NRF5X_PCA20006
-  desc Support for nRF51 Smart Beacon
-  parent CONFIG_ARCH_NRF51
-%config end
-
-%config CONFIG_NRF5X_PCA10028
-  desc Support for nRF51-DK
-  parent CONFIG_ARCH_NRF51
-%config end
-
-%config CONFIG_NRF5X_PCA10031
-  desc Support for nRF51-DK USB dongle
-  parent CONFIG_ARCH_NRF51
-%config end
-
-%config CONFIG_NRF5X_PCA10036
-  desc Support for nRF52832 Preview Development Kit
-  parent CONFIG_ARCH_NRF52
-%config end
-
-%config CONFIG_NRF5X_PCA10040
-  desc Support for nRF52832 Preview Development Kit v. B
-  parent CONFIG_ARCH_NRF52
-%config end
-
-%config CONFIG_NRF5X_TINYBLE
-  desc Support for nRF51822 Tiny-BLE Seeed Studio board
-  parent CONFIG_ARCH_NRF51
+%config CONFIG_NRF5X_BOARD_NAME
+  desc Board definition file basename
+  parent CONFIG_ARCH_NRF5X
+  flags value
 %config end
