libdevice/i2c: New class with bytecode support

--- a/libdevice/device.config
+++ b/libdevice/device.config
@@ -460,6 +460,45 @@
   desc Enable I2C device support
 %config end
 
+%config CONFIG_DEVICE_I2C_REQUEST
+  parent CONFIG_DEVICE_I2C
+  when CONFIG_DEVICE_I2C_TRANSACTION
+  when CONFIG_DEVICE_I2C_BYTECODE
+  desc Enable I2C request scheduler
+%config end
+
+%config CONFIG_DEVICE_I2C_TRANSACTION
+  parent CONFIG_DEVICE_I2C
+  depend CONFIG_DEVICE_I2C_REQUEST
+  depend CONFIG_MUTEK_KROUTINE_SCHED
+  when CONFIG_DEVICE_SHELL
+  flags auto
+  desc Enable scheduling I2C transaction requests
+%config end
+
+%config CONFIG_DEVICE_I2C_BYTECODE
+  parent CONFIG_DEVICE_I2C
+  depend CONFIG_DEVICE_I2C_REQUEST
+  depend CONFIG_MUTEK_BYTECODE
+  depend CONFIG_MUTEK_KROUTINE_SCHED
+  flags auto
+  desc Enable scheduling I2C bytecode requests
+%config end
+
+%config CONFIG_DEVICE_I2C_BYTECODE_TIMER
+  parent CONFIG_DEVICE_I2C_BYTECODE
+  depend CONFIG_DEVICE_TIMER
+  flags auto
+  desc Enable time handling in I2C bytecode
+%config end
+
+%config CONFIG_DEVICE_I2C_BYTECODE_GPIO
+  parent CONFIG_DEVICE_I2C_BYTECODE
+  depend CONFIG_DEVICE_GPIO
+  flags auto
+  desc Enable GPIO access from I2C bytecode
+%config end
+
 %config CONFIG_DEVICE_MEM
   parent CONFIG_DEVICE
   flags auto
