arch/psoc4: WIP on clock driver

--- a/arch/psoc4/drivers/Makefile
+++ b/arch/psoc4/drivers/Makefile
@@ -1,4 +1,11 @@
+objs += imo.o
+ifeq ($(CONFIG_DRIVER_PSOC4_CLOCK),defined)
 objs += clock.o
+else
+objs += clock_nodrv.o
+endif
+objs-$(CONFIG_DRIVER_PSOC4_PERI) += peri.o
+objs-$(CONFIG_DRIVER_PSOC4_PCLK) += pclk.o
 objs-$(CONFIG_DRIVER_PSOC4_PRINTK) += printk.o
 objs-$(CONFIG_DRIVER_PSOC4_UART) += uart.o
 objs-$(CONFIG_DRIVER_PSOC4_GPIO) += gpio.o
