--- a/arch/psoc4/drivers/drivers.config
+++ b/arch/psoc4/drivers/drivers.config
@@ -66,25 +66,47 @@
 
 # Clock
 
-%init INIT_DRIVER_PSOC4_CLOCK
-  parent CONFIG_ARCH_PSOC4
-  during INIT_BOOTSTRAP
-  function psoc4_clock_setup
-%init end
-
 %config CONFIG_DRIVER_PSOC4_CLOCK
   desc PSoC4/ProcBLE Clock device driver
   parent CONFIG_ARCH_PSOC4
   depend CONFIG_DEVICE_CLOCK
   depend CONFIG_DEVICE_CLOCK_GATING
-  provide CONFIG_DEVICE_CLOCK_FRAC_WIDTH=22
-  provide CONFIG_DEVICE_CLOCK_OSCD_WIDTH=22
   depend CONFIG_DEVICE_CLOCK_VARFREQ
 %config end
 
-%config CONFIG_DRIVER_PSOC4_CLOCK_EXTCLK
-  desc Enable support for EXTCLK HFCLK source
+%config CONFIG_DRIVER_PSOC4_CLOCK_BLE
+  desc PSoC4-BLE/Proc-BLE Clock device driver BLESS support
   parent CONFIG_DRIVER_PSOC4_CLOCK
+%config end
+
+%config CONFIG_DRIVER_PSOC4_CLOCK_NODRV
+  desc PSoC4 no clock device driver
+  parent CONFIG_ARCH_PSOC4
+  when CONFIG_DRIVER_PSOC4_CLOCK!
+%config end
+
+%init INIT_DRIVER_PSOC4_CLOCK
+  parent CONFIG_DRIVER_PSOC4_CLOCK_NODRV
+  during INIT_BOOTSTRAP
+  function psoc4_clock_setup
+%init end
+
+# Clock peripheral distribution divisors
+
+%config CONFIG_DRIVER_PSOC4_PERI
+  desc PSoC4-BLE/PRoC-BLE Peripheral clock divider support
+  parent CONFIG_ARCH_PSOC4
+  depend CONFIG_DEVICE_CLOCK
+  depend CONFIG_DEVICE_CLOCK_VARFREQ
+  provide CONFIG_DEVICE_CLOCK_FRAC_WIDTH=21
+%config end
+
+%config CONFIG_DRIVER_PSOC4_PCLK
+  desc PSoC4 Peripheral clock divider support
+  parent CONFIG_ARCH_PSOC4
+  depend CONFIG_DEVICE_CLOCK
+  depend CONFIG_DEVICE_CLOCK_VARFREQ
+  provide CONFIG_DEVICE_CLOCK_FRAC_WIDTH=21
 %config end
 
 # Wdt RTC
@@ -98,18 +120,4 @@
   depend CONFIG_DEVICE_SLEEP
   depend CONFIG_DEVICE_CLOCK
   depend CONFIG_DEVICE_CLOCK_VARFREQ
-%config end
-
-# BLE
-
-%config CONFIG_DRIVER_PSOC4_BLE
-  desc PSoC4 BLE Radio driver
-  parent CONFIG_ARCH_PSOC4
-  provide CONFIG_DEVICE_START_LOG2INC=1
-  depend CONFIG_DEVICE_TIMER
-  depend CONFIG_DEVICE_IRQ
-  depend CONFIG_DEVICE_SLEEP
-  depend CONFIG_DEVICE_CLOCK
-  depend CONFIG_DEVICE_CLOCK_VARFREQ
-  depend CONFIG_DEVICE_CLOCK_GATING
 %config end
