--- a/arch/nrf5x/drivers/drivers.config
+++ b/arch/nrf5x/drivers/drivers.config
@@ -148,6 +148,16 @@
   depend CONFIG_DEVICE_IRQ
 %config end
 
+# I2C/DMA
+
+%config CONFIG_DRIVER_NRF5X_TWIM
+  desc Enable nRF52 I2C+DMA driver
+  parent CONFIG_ARCH_NRF52
+  depend CONFIG_DEVICE_IOMUX
+  depend CONFIG_DEVICE_I2C
+  depend CONFIG_DEVICE_IRQ
+%config end
+
 # RTC
 
 %config CONFIG_DRIVER_NRF5X_RTC
