--- a/examples/i2c_test/i2c_master/config
+++ b/examples/i2c_test/i2c_master/config
@@ -28,6 +28,10 @@
   CONFIG_COMPILE_DEBUG
   CONFIG_HEXO_IRQ defined
 
-  CONFIG_PTHREAD_STACK_SIZE 0x700
+  CONFIG_PTHREAD_STACK_SIZE 0x1000
 
   CONFIG_DEVICE_SPI undefined
+
+  CONFIG_HEXO_STACK_ALIGN 32
+  CONFIG_CPU_ARM32M_MPU_STACK_GUARD defined
+
