arch/nrf5x: Fix clock driver for nrf52

--- a/arch/nrf5x/drivers/drivers.config
+++ b/arch/nrf5x/drivers/drivers.config
@@ -25,6 +25,13 @@
   depend CONFIG_MUTEK_KROUTINE_SCHED
 %config end
 
+%config CONFIG_DRIVER_NRF5X_CLOCK_DEPS
+  desc Internal token for nRF52 clock depends
+  parent CONFIG_DRIVER_NRF5X_CLOCK
+  depend CONFIG_DEVICE_INIT_PARTIAL
+  when CONFIG_ARCH_NRF52
+%config end
+
 %config CONFIG_DRIVER_NRF5X_NOCLOCK
   desc No nRF5x clock driver
   parent CONFIG_ARCH_NRF5X
