--- a/libdevice/device.config
+++ b/libdevice/device.config
@@ -496,6 +496,48 @@
   desc Enable persistent storage support
 %config end
 
+%config CONFIG_DEVICE_USBDEV
+  parent CONFIG_DEVICE
+  depend CONFIG_MUTEK_KROUTINE_SCHED
+  flags auto
+  desc Enable USB device support
+%config end
+
+%config CONFIG_USBDEV_USB_REVISION
+  parent CONFIG_DEVICE_USBDEV
+  flags value
+  desc USB version device are compliant with
+  default 0x200
+%config end
+
+%config CONFIG_USBDEV_EP0_BUFFER_SIZE
+  parent CONFIG_DEVICE_USBDEV
+  flags value
+  desc Size of endpoint 0 buffer size. Must be a power of 2.
+  default 256
+%config end
+
+%config CONFIG_USBDEV_MAX_ALTERNATE_COUNT
+  parent CONFIG_DEVICE_USBDEV
+  flags value
+  desc Enable alternate setting for interface when positive
+  default 0
+%config end
+
+%config CONFIG_USBDEV_MAX_INTERFACE_COUNT
+  parent CONFIG_DEVICE_USBDEV
+  flags value
+  desc Maximum number of interface for a usb device.
+  default 5
+%config end
+
+%config CONFIG_USBDEV_USB_LANGID
+  parent CONFIG_DEVICE_USBDEV
+  flags value
+  desc Language id for string descriptors
+  default 0x0409
+%config end
+
 %config CONFIG_DEVICE_SLEEP
   parent CONFIG_DEVICE
   flags auto
