pic32: add support for USB controller

--- a/arch/pic32/drivers/Makefile
+++ b/arch/pic32/drivers/Makefile
@@ -4,3 +4,4 @@ subdirs-$(CONFIG_DRIVER_PIC32_GPIO) += gpio
 subdirs-$(CONFIG_DRIVER_PIC32_TIMER) += timer
 subdirs-$(CONFIG_DRIVER_PIC32_SPI) += spi
 subdirs-$(CONFIG_DRIVER_PIC32_DMA) += dma
+subdirs-$(CONFIG_DRIVER_PIC32_USBDEV) += usbdev
