Lib usbdev: Add default device info structure

--- a/libdevice/device.config
+++ b/libdevice/device.config
@@ -524,6 +524,13 @@
   default 0
 %config end
 
+%config CONFIG_USBDEV_DEFAULT_DEVICE_INFO
+  parent CONFIG_DEVICE_USBDEV
+  flags value
+  desc default device information is used for enumeration
+  default defined
+%config end
+
 %config CONFIG_USBDEV_MAX_INTERFACE_COUNT
   parent CONFIG_DEVICE_USBDEV
   flags value
