tests/drv_max3420: Support external board definitions

--- a/tests/pool/drv_max3420/config
+++ b/tests/pool/drv_max3420/config
@@ -10,6 +10,7 @@
   # Libs
   CONFIG_APP_START
   CONFIG_MUTEK_CONSOLE
+  CONFIG_MUTEK_CONTEXT_SCHED
   CONFIG_MUTEK_SHELL
 
   %include scripts/options.build
@@ -30,3 +31,7 @@
 %section soclib-*
   CONFIG_DRIVER_USBDEV_MAX3420_SPI_BITRATE 250000
 
+%section rtt
+  CONFIG_DRIVER_RTT
+  CONFIG_DRIVER_RTT_PRINTK
+  CONFIG_MUTEK_PRINTK_HEXDUMP
