nrf5x: missing dep on CONFIG_DEVICE_SLEEP

--- a/arch/nrf5x/drivers/drivers.config
+++ b/arch/nrf5x/drivers/drivers.config
@@ -21,6 +21,7 @@
   parent CONFIG_ARCH_NRF5X
   depend CONFIG_DEVICE_CLOCK
   depend CONFIG_DEVICE_IRQ
+  depend CONFIG_DEVICE_SLEEP
   flags auto
   depend CONFIG_MUTEK_KROUTINE_SCHED
 %config end
