libtermui: added missing deps on scheduler and device char

--- a/libtermui/termui.config
+++ b/libtermui/termui.config
@@ -4,6 +4,8 @@
   module libtermui Libraries::Terminal user interface
   provide CONFIG_LICENSE_USE_GPL
   depend CONFIG_LIBC_PRINTF
+  depend CONFIG_MUTEK_CONTEXT_SCHED
+  depend CONFIG_DEVICE_CHAR
   flags auto
 %config end
 
