valio: add various subclasses

--- a/libdevice/valio.config
+++ b/libdevice/valio.config
@@ -102,3 +102,46 @@
   provide CONFIG_DEVICE_VALIO_ATTRIBUTE_ENUM
   default 2
 %config end
+
+%config CONFIG_DEVICE_VALIO_TEMPERATURE
+  desc Valio Temperature Sensor class enable
+  parent CONFIG_DEVICE_VALIO
+  flags auto
+%config end
+
+%config CONFIG_DEVICE_VALIO_TEMPERATURE_ATTRIBUTE_COUNT
+  desc Valio Temperature Sensor class attribute count
+  parent CONFIG_DEVICE_VALIO_TEMPERATURE
+  flags value
+  provide CONFIG_DEVICE_VALIO_ATTRIBUTE_ENUM
+  default 2
+%config end
+
+%config CONFIG_DEVICE_VALIO_HUMIDITY
+  desc Valio Humidity Sensor class enable
+  parent CONFIG_DEVICE_VALIO
+  flags auto
+%config end
+
+%config CONFIG_DEVICE_VALIO_HUMIDITY_ATTRIBUTE_COUNT
+  desc Valio Humidity Sensor class attribute count
+  parent CONFIG_DEVICE_VALIO_HUMIDITY
+  flags value
+  provide CONFIG_DEVICE_VALIO_ATTRIBUTE_ENUM
+  default 2
+%config end
+
+%config CONFIG_DEVICE_VALIO_LIGHT
+  desc Valio Ambient Light Sensor class enable
+  parent CONFIG_DEVICE_VALIO
+  flags auto
+%config end
+
+%config CONFIG_DEVICE_VALIO_LIGHT_ATTRIBUTE_COUNT
+  desc Valio Ambient Light Sensor class attribute count
+  parent CONFIG_DEVICE_VALIO_LIGHT
+  flags value
+  provide CONFIG_DEVICE_VALIO_ATTRIBUTE_ENUM
+  default 2
+%config end
+
