arch/bcm283x i2c: fixed some bugs

--- a/arch/bcm283x/drivers/i2c/i2c.config
+++ b/arch/bcm283x/drivers/i2c/i2c.config
@@ -4,6 +4,7 @@
   parent CONFIG_ARCH_BCM283X
   depend CONFIG_DEVICE_I2C
   depend CONFIG_DEVICE_IRQ
+  depend CONFIG_MUTEK_KROUTINE_SCHED
 %config end
 
 %config CONFIG_DRIVER_BCM283X_I2C_MAX_TRANSFER
