arch/cc26xx: fix use of libdevice only when enabled in config

--- a/arch/cc26xx/Makefile
+++ b/arch/cc26xx/Makefile
@@ -1,4 +1,5 @@
-objs = arch_init.o ti_init.o dev_cc26xx.o power.o
+objs = arch_init.o ti_init.o power.o
+objs-$(CONFIG_DEVICE) += dev_cc26xx.o
 
 meta = ldscript
 
