--- a/arch/psoc4/drivers/drivers.config
+++ b/arch/psoc4/drivers/drivers.config
@@ -121,3 +121,16 @@
   depend CONFIG_DEVICE_CLOCK
   depend CONFIG_DEVICE_CLOCK_VARFREQ
 %config end
+
+# BLESS/RD/LL driver
+
+%config CONFIG_DRIVER_PSOC4_BLE
+  desc PSoC4 M0S8 BLE Subsystem driver
+  parent CONFIG_ARCH_PSOC4
+  provide CONFIG_DEVICE_START_LOG2INC=2
+  depend CONFIG_DEVICE_IRQ
+  depend CONFIG_DEVICE_CRYPTO
+  depend CONFIG_DEVICE_CLOCK
+  depend CONFIG_DEVICE_CLOCK_GATING
+  depend CONFIG_DEVICE_CLOCK_THROTTLE
+%config end
