bytecode: use native code generation when processor support is available

--- a/cpu/arm32m/arm32m.config
+++ b/cpu/arm32m/arm32m.config
@@ -104,6 +104,7 @@
   provide CONFIG_CPU_NONALIGNED_ACCESS=1
   exclude CONFIG_LOAD_RESET_SEPARATE
   exclude CONFIG_ARCH_SMP
+  provide CONFIG_CPU_NATIVE_BYTECODE
 
   require CONFIG_CPU_ARM32M_ARCH_VERSION
 %config end
