--- a/cpu/cpu.config
+++ b/cpu/cpu.config
@@ -173,3 +173,9 @@
   flags	internal value
 %config end
 
+%config CONFIG_CPU_NATIVE_BYTECODE
+  parent CONFIG_CPU
+  desc A backend which compiles bytecode to native code is available for this processor
+  flags meta
+%config end
+
