--- a/cpu/mips/mips.config
+++ b/cpu/mips/mips.config
@@ -102,6 +102,7 @@
   provide CONFIG_CPU_RESET_ADDR=0xbfc00000
   provide CONFIG_CPU_RESET_SIZE=20
   provide CONFIG_CPU_NONALIGNED_ACCESS=1
+  provide CONFIG_CPU_NATIVE_BYTECODE
 %config end
 
 %config CONFIG_CPU_MIPS_FPU
