--- a/mutek/mutek.config
+++ b/mutek/mutek.config
@@ -572,7 +572,7 @@
 %config CONFIG_MUTEK_BYTECODE_VM
   desc Enable the mutekh bytecode interpreter.
   parent CONFIG_MUTEK_BYTECODE
-  when CONFIG_MUTEK_BYTECODE_NATIVE!
+  when CONFIG_CPU_NATIVE_BYTECODE!
 %config end
 
 %config CONFIG_MUTEK_BYTECODE_VM64
@@ -584,6 +584,8 @@
 %config CONFIG_MUTEK_BYTECODE_NATIVE
   desc Enable translation of bytecode in machine code at compile time.
   parent CONFIG_MUTEK_BYTECODE
+  when CONFIG_CPU_NATIVE_BYTECODE
+  depend CONFIG_CPU_NATIVE_BYTECODE
 %config end
 
 %config CONFIG_MUTEK_BYTECODE_CHECKING
