drivers/char/usbdev_cdc: Rename to ACM

--- a/drivers/char/usbdev_acm/usbdev_acm.config
+++ b/drivers/char/usbdev_acm/usbdev_acm.config
@@ -1,8 +1,7 @@
-
-%config CONFIG_DRIVER_CHAR_USBDEV_CDC
+%config CONFIG_DRIVER_CHAR_USBDEV_ACM
   parent CONFIG_DRIVER
   depend CONFIG_DEVICE_CHAR
   depend CONFIG_DEVICE_USBDEV
   flags auto
-  desc Enable usb char service
+  desc Enable USB CDC ACM char device
 %config end
