libnetwork: Add ethernet layer definition

--- a/libnetwork/network.config
+++ b/libnetwork/network.config
@@ -14,3 +14,16 @@
   flags enum
   default 0
 %config end
+
+%config CONFIG_NET_ETHERNET
+  desc Allocate Ethernet Layer ID
+  parent CONFIG_NET
+%config end
+
+%config CONFIG_NET_ETHERNET_LAYER_COUNT
+  desc Ethernet Layer ID Range
+  parent CONFIG_NET_ETHERNET
+  flags value
+  provide CONFIG_NET_LAYER_TYPE_ENUM
+  default 1
+%config end
