libnetwork: Fix dependency on buffer_pool

--- a/libnetwork/network.config
+++ b/libnetwork/network.config
@@ -4,6 +4,7 @@
   depend CONFIG_DEVICE_TIMER
   depend CONFIG_MUTEK_CONTEXT_SCHED
   depend CONFIG_MUTEK_SEMAPHORE
+  depend CONFIG_MUTEK_BUFFER_POOL
   flags auto
 %config end
 
