added the CONFIG_LOAD_NO_ZERO_IN_BSS config token

--- a/mutek/load.config
+++ b/mutek/load.config
@@ -228,3 +228,8 @@
   parent CONFIG_LOAD
 %config end
 
+%config CONFIG_LOAD_NO_ZERO_IN_BSS
+  desc Do not put zero initialized variables in the .bss section
+  parent CONFIG_LOAD
+%config end
+
