--- a/mutek/mutek.config
+++ b/mutek/mutek.config
@@ -50,8 +50,8 @@
 
 %init INIT_ZERO_BSS
   parent CONFIG_MUTEK
-  condition CONFIG_LOAD_ROM
-  condition CONFIG_LOAD_BOOTLOAD
+  condition CONFIG_LOAD_ROM CONFIG_LOAD_NO_ZERO_IN_BSS!
+  condition CONFIG_LOAD_BOOTLOAD CONFIG_LOAD_NO_ZERO_IN_BSS!
   during INIT_MEMORY_SECTIONS
   function section_bss_init
 %init end
