device spi: allow driving of cs on driver init

--- a/libdevice/device.config
+++ b/libdevice/device.config
@@ -280,6 +280,19 @@
   desc Enable SPI request scheduler
 %config end
 
+%config CONFIG_DEVICE_SPI_CTRL_CS
+  parent CONFIG_DEVICE_SPI_REQUEST
+  default defined
+  desc Allow driving of chip select using the spi controller
+%config end
+
+%config CONFIG_DEVICE_SPI_GPIO_CS
+  parent CONFIG_DEVICE_SPI_REQUEST
+  default defined
+  depend CONFIG_DEVICE_GPIO
+  desc Allow driving of chip select using a gpio
+%config end
+
 %config CONFIG_DEVICE_SPI_TRANSACTION
   parent CONFIG_DEVICE_SPI
   depend CONFIG_DEVICE_SPI_REQUEST
