--- a/libdevice/device.config
+++ b/libdevice/device.config
@@ -597,6 +597,12 @@
   default 0x0409
 %config end
 
+%config CONFIG_DEVICE_NFC
+  parent CONFIG_DEVICE
+  flags auto
+  desc Enable NFC device support
+%config end
+
 %config CONFIG_DEVICE_SLEEP
   parent CONFIG_DEVICE
   flags auto
