libdevice: Add IR valio subclass

--- a/libdevice/valio.config
+++ b/libdevice/valio.config
@@ -145,3 +145,17 @@
   default 2
 %config end
 
+%config CONFIG_DEVICE_VALIO_IR
+  desc Valio IR transceiver class enable
+  parent CONFIG_DEVICE_VALIO
+  flags auto
+%config end
+
+%config CONFIG_DEVICE_VALIO_IR_ATTRIBUTE_COUNT
+  desc Valio IR transceiver class attribute count
+  parent CONFIG_DEVICE_VALIO_IR
+  flags value
+  provide CONFIG_DEVICE_VALIO_ATTRIBUTE_ENUM
+  default 1
+%config end
+
