--- a/arch/nrf5x/drivers/drivers.config
+++ b/arch/nrf5x/drivers/drivers.config
@@ -332,5 +332,15 @@
   desc Enable nRF52 ADC driver
   parent CONFIG_ARCH_NRF52
   depend CONFIG_DEVICE_VALIO
+  depend CONFIG_DEVICE_IOMUX
   depend CONFIG_DEVICE_VALIO_ADC
+%config end
+
+# PDM
+
+%config CONFIG_DRIVER_NRF52_PDM
+  desc Enable nRF52 PDM driver
+  parent CONFIG_ARCH_NRF52
+  depend CONFIG_DEVICE_IOMUX
+  depend CONFIG_DEVICE_PCM
 %config end
