arch/nrf5x: Add nRF52 IR blaster device

--- a/arch/nrf5x/drivers/drivers.config
+++ b/arch/nrf5x/drivers/drivers.config
@@ -343,3 +343,13 @@
   depend CONFIG_DEVICE_IOMUX
   depend CONFIG_DEVICE_PCM
 %config end
+
+# IR Blaster (PWM-based)
+
+%config CONFIG_DRIVER_NRF52_IR_BLASTER
+  desc Enable nRF52 IR-blaster driver
+  parent CONFIG_ARCH_NRF52
+  depend CONFIG_DEVICE_IOMUX
+  depend CONFIG_DEVICE_VALIO
+  depend CONFIG_DEVICE_VALIO_IR
+%config end
