drivers/mem: Update I2C EEPROM driver after API changes

--- a/drivers/mem/i2c_eeprom/i2c_eeprom.config
+++ b/drivers/mem/i2c_eeprom/i2c_eeprom.config
@@ -2,5 +2,6 @@
   desc Generic I2C Eeprom driver
   depend CONFIG_DEVICE_MEM
   depend CONFIG_DEVICE_I2C
+  depend CONFIG_DEVICE_I2C_TRANSACTION
   parent CONFIG_DRIVER
 %config end
