--- a/drivers/char/Makefile
+++ b/drivers/char/Makefile
@@ -5,4 +5,5 @@ subdirs-$(CONFIG_DRIVER_CHAR_NULL) += null
 subdirs-$(CONFIG_DRIVER_CHAR_CADENCE_UART) += cadence_uart
 subdirs-$(CONFIG_DRIVER_CHAR_MUX) += mux
 subdirs-$(CONFIG_DRIVER_CHAR_PIPE) += pipe
+subdirs-$(CONFIG_DRIVER_HD44780) += hd44780
 subdirs-$(CONFIG_DRIVER_CHAR_USBDEV_ACM) += usbdev_acm
