arch/nrf5x: Add NFCT driver

--- a/arch/nrf5x/drivers/drivers.config
+++ b/arch/nrf5x/drivers/drivers.config
@@ -366,3 +366,12 @@
   depend CONFIG_DEVICE_VALIO
   depend CONFIG_DEVICE_VALIO_IR
 %config end
+
+# NFCT
+
+%config CONFIG_DRIVER_NRF52_NFCT
+  desc Enable nRF52 NFC Tag emulation
+  parent CONFIG_ARCH_NRF5X
+  require CONFIG_NRF5X_MODEL>=52000
+  depend CONFIG_DEVICE_NFC
+%config end
