--- a/arch/nrf5x/drivers/Makefile
+++ b/arch/nrf5x/drivers/Makefile
@@ -21,3 +21,4 @@ objs-$(CONFIG_DRIVER_NRF5X_ADC) += adc.o
 objs-$(CONFIG_DRIVER_NRF52_SAADC) += saadc.o
 objs-$(CONFIG_DRIVER_NRF52_PDM) += pdm.o
 objs-$(CONFIG_DRIVER_NRF52_IR_BLASTER) += ir_blaster.o
+objs-$(CONFIG_DRIVER_NRF52_NFCT) += nfct.o
