stm32: rename config token for family series

--- a/arch/stm32/stm32.config
+++ b/arch/stm32/stm32.config
@@ -5,7 +5,7 @@
   provide CONFIG_ARCH_META
   provide CONFIG_ARCH_NAME=stm32
   exclude CONFIG_ARCH_SMP CONFIG_ARCH_CLUSTER
-  require CONFIG_STM32_SERIE
+  require CONFIG_STM32_SERIES
   require CONFIG_STM32_FAMILY
   require CONFIG_STM32_AHBRAMSIZE
   require CONFIG_STM32_CPURAMSIZE
@@ -20,7 +20,7 @@
   function stm32_clock_init
 %init end
 
-%config CONFIG_STM32_SERIE
+%config CONFIG_STM32_SERIES
   desc Defines the STM32 architecture series
   parent CONFIG_ARCH_STM32
   flags value
