Update dwc ethernet

--- a/drivers/net/dwc10100/dwc10100.config
+++ b/drivers/net/dwc10100/dwc10100.config
@@ -3,6 +3,7 @@
   depend CONFIG_DEVICE_NET
   depend CONFIG_NET
   depend CONFIG_NET_ETHERNET
+  depend CONFIG_MUTEK_KROUTINE_SCHED
   desc Enable Synopsys DesignWare 10/100 Ethernet MAC
 %config end
 
