arch/nrf5x: Implement SAADC driver

--- a/arch/nrf5x/drivers/drivers.config
+++ b/arch/nrf5x/drivers/drivers.config
@@ -280,3 +280,12 @@
   depend CONFIG_DEVICE_VALIO
   depend CONFIG_DEVICE_VALIO_ADC
 %config end
+
+# SAADC
+
+%config CONFIG_DRIVER_NRF52_SAADC
+  desc Enable nRF52 ADC driver
+  parent CONFIG_ARCH_NRF52
+  depend CONFIG_DEVICE_VALIO
+  depend CONFIG_DEVICE_VALIO_ADC
+%config end
