examples/i2c_test: Update code
Port code after bytecode VM changes, add a README,
port to nRF51.

--- a/examples/i2c_test/i2c_master/Makefile
+++ b/examples/i2c_test/i2c_master/Makefile
@@ -1,1 +1,5 @@
 objs = i2c_master.o i2c_master_bytecode.o checksum.o
+
+ifneq ($(CONFIG_I2C_TEST_BOARD_NAME),undefined)
+objs += $(CONFIG_I2C_TEST_BOARD_NAME).o
+endif
