arch/nrf5x: Use an enum allocator for GPIOTE channels

--- a/arch/nrf5x/drivers/drivers.config
+++ b/arch/nrf5x/drivers/drivers.config
@@ -14,6 +14,13 @@
   default 0
 %config end
 
+%config CONFIG_DRIVER_NRF5X_GPIOTE_ENUM
+  desc nRF5x GPIOTE allocator
+  parent CONFIG_ARCH_NRF5X
+  flags enum
+  default 0
+%config end
+
 # Clock
 
 %config CONFIG_DRIVER_NRF5X_CLOCK
@@ -75,6 +82,14 @@
   when CONFIG_DRIVER_NRF5X_GPIO_ICU_CHANNEL_COUNT>0
 %config end
 
+%config CONFIG_DRIVER_NRF5X_GPIO_TE_COUNT
+  desc nRF5x GPIO driver GPIOTE count
+  parent CONFIG_DRIVER_NRF5X_GPIO
+  flags value
+  provide CONFIG_DRIVER_NRF5X_GPIOTE_ENUM
+  default CONFIG_DRIVER_NRF5X_GPIO_ICU_CHANNEL_COUNT
+%config end
+
 %config CONFIG_DRIVER_NRF5X_GPIO_PPI_COUNT
   desc nRF5x GPIO PPI channel count
   parent CONFIG_DRIVER_NRF5X_GPIO
@@ -107,6 +122,14 @@
   flags value
   default 1
   range [1,3]
+%config end
+
+%config CONFIG_DRIVER_NRF5X_GPIO_PWM_TE_COUNT
+  desc nRF5x GPIO+PWM driver GPIOTE count
+  parent CONFIG_DRIVER_NRF5X_GPIO_PWM
+  flags value
+  provide CONFIG_DRIVER_NRF5X_GPIOTE_ENUM
+  default CONFIG_DRIVER_NRF5X_GPIO_PWM_CHANNEL_COUNT
 %config end
 
 %config CONFIG_DRIVER_NRF5X_GPIO_PWM_PPI_COUNT
