--- a/arch/nrf5x/drivers/drivers.config
+++ b/arch/nrf5x/drivers/drivers.config
@@ -211,6 +211,28 @@
   depend CONFIG_DEVICE_IRQ
 %config end
 
+%config CONFIG_DRIVER_NRF52_SPIM_PAN58
+  desc Enable workaround for PAN58
+  parent CONFIG_DRIVER_NRF52_SPIM
+  default defined
+%config end
+
+%config CONFIG_DRIVER_NRF52_SPIM_PAN58_PPI_COUNT
+  desc Internal allocation of PPI for PAN58 workaround
+  parent CONFIG_DRIVER_NRF52_SPIM_PAN58
+  flags value
+  provide CONFIG_DRIVER_NRF5X_PPI_ENUM
+  default 1
+%config end
+
+%config CONFIG_DRIVER_NRF52_SPIM_PAN58_GPIOTE_COUNT
+  desc Internal allocation of GPIOTE for PAN58 workaround
+  parent CONFIG_DRIVER_NRF52_SPIM_PAN58
+  flags value
+  provide CONFIG_DRIVER_NRF5X_GPIOTE_ENUM
+  default 1
+%config end
+
 # UART
 
 %config CONFIG_DRIVER_NRF5X_UART
