efm32: allow configuration of the leuart data rate

--- a/arch/efm32/drivers/leuart/leuart.config
+++ b/arch/efm32/drivers/leuart/leuart.config
@@ -4,6 +4,13 @@
   parent CONFIG_ARCH_EFM32
 %config end
 
+%config CONFIG_DRIVER_EFM32_LEUART_RATE
+  desc Specify EFM32 Low Energy UART default data rate
+  parent CONFIG_DRIVER_EFM32_LEUART
+  flags value
+  default 9600
+%config end
+
 %config CONFIG_DRIVER_EFM32_LEUART_CHAR
   desc Enable EFM32 Low Energy UART char driver
   parent CONFIG_DRIVER_EFM32_LEUART
