arch/nrf5x: Update GPIO driver after input_range removal

--- a/arch/nrf5x/drivers/drivers.config
+++ b/arch/nrf5x/drivers/drivers.config
@@ -98,10 +98,9 @@
   default CONFIG_DRIVER_NRF5X_GPIO_ICU_CHANNEL_COUNT
 %config end
 
-%config CONFIG_DRIVER_NRF5X_GPIO_INPUT_RANGE
-  desc Enable nRF5x GPIO driver
+%config CONFIG_DRIVER_NRF5X_GPIO_UNTIL
+  desc Enable nRF5x GPIO driver UNTIL feature
   parent CONFIG_DRIVER_NRF5X_GPIO
-  depend CONFIG_DEVICE_ICU
   depend CONFIG_DEVICE_IRQ
 %config end
 
