arch/nrf5x: Add IO extender support for PCA100{28,36,40}

--- a/arch/nrf5x/board/board.config
+++ b/arch/nrf5x/board/board.config
@@ -3,3 +3,8 @@
   parent CONFIG_ARCH_NRF5X
   flags value
 %config end
+
+%config CONFIG_NRF5X_BOARD_I2C_EXT
+  desc Support I2C ext on board (not supported on all boards)
+  parent CONFIG_ARCH_NRF5X
+%config end
