mutek: support multiple printk backends, added logk with filtering

--- a/arch/emu/emu.config
+++ b/arch/emu/emu.config
@@ -70,6 +70,7 @@
 
 %config CONFIG_EMU_PRINTK
   desc enable early text console before device initialization
+  depend CONFIG_MUTEK_PRINTK
   provide CONFIG_MUTEK_PRINTK_HANDLER
   parent CONFIG_ARCH_EMU
 %config end
