--- a/drivers/printk/printk.config
+++ b/drivers/printk/printk.config
@@ -32,6 +32,9 @@
   desc Use console device as printk output printk.
   desc Note: there will be no printk output until console is initialized.
   parent CONFIG_DRIVER
+  depend CONFIG_MUTEK_PRINTK
+  depend CONFIG_MUTEK_CONSOLE
+  depend CONFIG_MUTEK_KROUTINE_SCHED
   provide CONFIG_MUTEK_PRINTK_HANDLER
 %config end
 
