--- a/mutek/mutek.config
+++ b/mutek/mutek.config
@@ -213,22 +213,41 @@
   depend CONFIG_LIBC_FORMATTER
 %config end
 
+%config CONFIG_MUTEK_PRINTK_COMPILE_EXPR
+  desc Set the logk filtering expression used at compile time.
+  desc Calls to logk will be filtered out when this evaluates to false.
+  parent CONFIG_MUTEK_PRINTK
+  flags value userval
+  # example: level >= LOGK_LEVEL_DEBUG || id == 'test'
+  default level >= LOGK_LEVEL_NORMAL
+%config end
+
+%config CONFIG_MUTEK_PRINTK_RUNTIME_LEVEL
+  desc Set the logk filtering level initially used at runtime.
+  parent CONFIG_MUTEK_PRINTK
+  flags value
+  default LOGK_LEVEL_NORMAL
+%config end
+
+%config CONFIG_MUTEK_PRINTK_RUNTIME_EXPR
+  desc Set the logk filtering expression used at runtime.
+  desc Calls to logk will be filtered out when this evaluates to false.
+  parent CONFIG_MUTEK_PRINTK
+  flags value
+  # example: level >= backend_level || id == 'test'
+  default (!backend_id || backend_id == id) && level >= backend_level
+%config end
+
 %config CONFIG_MUTEK_PRINTK_HANDLER
   desc An implementation for printk output exists
   parent CONFIG_MUTEK_PRINTK
-  flags meta single
+  flags meta
 %config end
 
 %config CONFIG_MUTEK_PRINTK_HEXDUMP
   desc Provide hexdumpk() for kernel diagnostic
   parent CONFIG_MUTEK_PRINTK
   depend CONFIG_LIBC_FORMATTER_HEXDUMP
-%config end
-
-%config CONFIG_MUTEK_PRINTK_LOCK
-  desc Use spinlock to protect printk() calls and avoid output mess.
-  desc May change code behavior and hide potential issues.
-  parent CONFIG_MUTEK_PRINTK
 %config end
 
 %config CONFIG_MUTEK_PRINTK_ADDR
