--- a/scripts/global.config
+++ b/scripts/global.config
@@ -73,6 +73,7 @@
   flags root
   desc Enable debug features globaly
   suggest CONFIG_COMPILE_OPTIMIZE=0
+  provide CONFIG_MUTEK_PRINTK_COMPILE_EXPR=(level>=LOGK_LEVEL_DEBUG)
 %config end
 
 %config CONFIG_RELEASE
