--- a/arch/nrf5x/drivers/drivers.config
+++ b/arch/nrf5x/drivers/drivers.config
@@ -344,6 +344,12 @@
   depend CONFIG_DEVICE_PCM
 %config end
 
+%config CONFIG_DRIVER_NRF52_PDM_POWERGATE
+  desc Enable nRF52 PDM driver external power gating
+  parent CONFIG_DRIVER_NRF52_PDM
+  depend CONFIG_DEVICE_CLOCK
+%config end
+
 # IR Blaster (PWM-based)
 
 %config CONFIG_DRIVER_NRF52_IR_BLASTER
