arch/nrf5x: Prepare for next nRF52s

--- a/arch/nrf5x/drivers/drivers.config
+++ b/arch/nrf5x/drivers/drivers.config
@@ -37,7 +37,7 @@
   desc Internal token for nRF52 clock depends
   parent CONFIG_DRIVER_NRF5X_CLOCK
   depend CONFIG_DEVICE_INIT_PARTIAL
-  when CONFIG_ARCH_NRF52
+  when CONFIG_NRF5X_MODEL>=52000
 %config end
 
 %config CONFIG_DRIVER_NRF5X_NOCLOCK
@@ -69,9 +69,8 @@
 %config CONFIG_DRIVER_NRF5X_GPIO_ICU_CHANNEL_COUNT
   desc Enable nRF5x GPIO IRQ routing
   parent CONFIG_DRIVER_NRF5X_GPIO
-  flags value
+  flags value maxval
   default 0
-  range [0,4]
 %config end
 
 %config CONFIG_DRIVER_NRF5X_GPIO_ICU
@@ -204,7 +203,8 @@
 
 %config CONFIG_DRIVER_NRF52_SPIM
   desc Enable nRF52 SPIM driver (SPI Master with DMA)
-  parent CONFIG_ARCH_NRF52
+  parent CONFIG_ARCH_NRF5X
+  require CONFIG_NRF5X_MODEL>=52000
   depend CONFIG_DEVICE_IOMUX
   depend CONFIG_DEVICE_SPI
   depend CONFIG_DEVICE_IRQ
@@ -285,7 +285,8 @@
 
 %config CONFIG_DRIVER_NRF52_UARTE
   desc Enable nRF52 UARTE driver (UART with DMA)
-  parent CONFIG_ARCH_NRF52
+  parent CONFIG_ARCH_NRF5X
+  require CONFIG_NRF5X_MODEL>=52000
   depend CONFIG_DEVICE_IOMUX
   depend CONFIG_DEVICE_CHAR
   depend CONFIG_DEVICE_IRQ
@@ -329,7 +330,8 @@
 
 %config CONFIG_DRIVER_NRF52_SAADC
   desc Enable nRF52 ADC driver
-  parent CONFIG_ARCH_NRF52
+  parent CONFIG_ARCH_NRF5X
+  require CONFIG_NRF5X_MODEL>=52000
   depend CONFIG_DEVICE_VALIO
   depend CONFIG_DEVICE_IOMUX
   depend CONFIG_DEVICE_VALIO_ADC
@@ -339,7 +341,8 @@
 
 %config CONFIG_DRIVER_NRF52_PDM
   desc Enable nRF52 PDM driver
-  parent CONFIG_ARCH_NRF52
+  parent CONFIG_ARCH_NRF5X
+  require CONFIG_NRF5X_MODEL>=52000
   depend CONFIG_DEVICE_IOMUX
   depend CONFIG_DEVICE_PCM
 %config end
@@ -354,7 +357,8 @@
 
 %config CONFIG_DRIVER_NRF52_IR_BLASTER
   desc Enable nRF52 IR-blaster driver
-  parent CONFIG_ARCH_NRF52
+  parent CONFIG_ARCH_NRF5X
+  require CONFIG_NRF5X_MODEL>=52000
   depend CONFIG_DEVICE_IOMUX
   depend CONFIG_DEVICE_VALIO
   depend CONFIG_DEVICE_VALIO_IR
