--- a/arch/nrf5x/nrf5x.config
+++ b/arch/nrf5x/nrf5x.config
@@ -3,19 +3,12 @@
   module arch Platforms::nRF5X platform
   provide CONFIG_ARCH_META
   provide CONFIG_ARCH_NAME=nrf5x
-  single CONFIG_ARCH_NRF51 CONFIG_ARCH_NRF52
 %config end
 
-%config CONFIG_ARCH_NRF51
-  desc Nordic nRF51 Series
+%config CONFIG_NRF5X_MODEL
+  desc Nordic nRF5x model number
   parent CONFIG_ARCH_NRF5X
-  depend CONFIG_CPU_ARM32M_CORTEXM0
-%config end
-
-%config CONFIG_ARCH_NRF52
-  desc Nordic nRF52 Series
-  parent CONFIG_ARCH_NRF5X
-  depend CONFIG_CPU_ARM32M_CORTEXM4
+  flags value
 %config end
 
 %config CONFIG_NRF5X_RAMSIZE
@@ -24,8 +17,14 @@
   flags value
 %config end
 
+%config CONFIG_NRF5X_GPIO_COUNT
+  desc nRF5x GPIO count
+  parent CONFIG_ARCH_NRF5X
+  flags value
+%config end
+
 %init INIT_NRF52
-  parent CONFIG_ARCH_NRF52
+  parent CONFIG_ARCH_NRF5X
   during INIT_BOOTSTRAP
   function nrf52_init
 %init end
