--- a/drivers/valio/Makefile
+++ b/drivers/valio/Makefile
@@ -4,10 +4,10 @@ objs-$(CONFIG_DRIVER_PUSH_BUTTON) += push_button.o
 objs-$(CONFIG_DRIVER_MTCH6102) += mtch6102.o
 objs-$(CONFIG_DRIVER_ADXL345) += adxl345.o
 objs-$(CONFIG_DRIVER_BUTTON_SET) += button_set.o
-objs-$(CONFIG_DRIVER_MPU6505) += mpu6505.o
 
 subdirs-$(CONFIG_DRIVER_MATRIX_KEYBOARD) += matrix_keyboard
 subdirs-$(CONFIG_DRIVER_ADXL362) += adxl362
+subdirs-$(CONFIG_DRIVER_MPU650X) += mpu650x
 subdirs-$(CONFIG_DRIVER_PCF8563) += pcf8563
 subdirs-$(CONFIG_DRIVER_DS3231) += ds3231
 subdirs-$(CONFIG_DRIVER_MLX90614) += mlx90614
