--- a/examples/hello/config
+++ b/examples/hello/config
@@ -4,12 +4,45 @@
   # New source code module to be compiled
   %append MODULES $(OUTPUT_NAME):$(CONFIGPATH)
 
-  %include scripts/options.build
-  %include arch/arch.build
-
   # Application license
   CONFIG_LICENSE_APP_LGPL
 
   # Features
   CONFIG_APP_START
 
+CONFIG_DRIVER_NRF5X_GPIO_ICU
+CONFIG_DRIVER_NRF5X_CLOCK
+CONFIG_DRIVER_NRF5X_TIMER
+CONFIG_DRIVER_NRF5X_GPIO
+CONFIG_DRIVER_NRF5X_RTC
+CONFIG_DRIVER_MPU650X
+CONFIG_DRIVER_MPU650X_I2C
+
+%subsection printk-uart
+  CONFIG_DRIVER_NRF5X_PRINTK
+  CONFIG_MUTEK_PRINTK_HEXDUMP
+%end
+
+%subsection shell-uart
+  CONFIG_DRIVER_NRF5X_UART
+  CONFIG_DEVICE_UART
+  %inherit shell
+%end
+
+%subsection printk-rtt
+  CONFIG_DRIVER_RTT_PRINTK
+  CONFIG_MUTEK_PRINTK_HEXDUMP
+%end
+
+%subsection shell-rtt
+  CONFIG_DRIVER_CHAR_RTT
+  CONFIG_DRIVER_CHAR_RTT_RX_BUFFER_SIZE 128
+  %inherit shell
+%end
+
+  %include scripts/options.build
+  %include arch/arch.build
+
+CONFIG_DRIVER_NRF5X_GPIO_ICU_CHANNEL_COUNT 3
+#CONFIG_MUTEK_PRINTK_COMPILE_EXPR level >= LOGK_LEVEL_NORMAL || id == 'ni2c'
+#CONFIG_MUTEK_PRINTK_RUNTIME_LEVEL LOGK_LEVEL_DEBUG
