--- a/arch/nrf5x/drivers/drivers.config
+++ b/arch/nrf5x/drivers/drivers.config
@@ -175,6 +175,7 @@
   desc Enable nRF5x RTC driver
   parent CONFIG_ARCH_NRF5X
   provide CONFIG_DEVICE_START_LOG2INC=1
+  depend CONFIG_DEVICE_SLEEP
   depend CONFIG_DEVICE_TIMER
   depend CONFIG_DEVICE_IRQ
 %config end
@@ -185,6 +186,7 @@
   desc Enable nRF5x Timer driver
   parent CONFIG_ARCH_NRF5X
   provide CONFIG_DEVICE_START_LOG2INC=1
+  depend CONFIG_DEVICE_SLEEP
   depend CONFIG_DEVICE_TIMER
   depend CONFIG_DEVICE_IRQ
 %config end
