--- a/drivers/valio/Makefile
+++ b/drivers/valio/Makefile
@@ -11,3 +11,4 @@ subdirs-$(CONFIG_DRIVER_MPU650X) += mpu650x
 subdirs-$(CONFIG_DRIVER_PCF8563) += pcf8563
 subdirs-$(CONFIG_DRIVER_DS3231) += ds3231
 subdirs-$(CONFIG_DRIVER_MLX90614) += mlx90614
+subdirs-$(CONFIG_DRIVER_MAX6675) += max6675
