--- a/arch/nrf5x/board/board.config
+++ b/arch/nrf5x/board/board.config
@@ -4,7 +4,7 @@
   flags value
 %config end
 
-%config CONFIG_NRF5X_BOARD_I2C_EXT
-  desc Support I2C ext on board (not supported on all boards)
+%config CONFIG_NRF5X_BOARD_ARDUINO_MODE
+  desc Enalbe peripherals as mapped on arduino layout (SPI, I2C)
   parent CONFIG_ARCH_NRF5X
 %config end
