arch/nrf5x: Take advantage of scoped locking

--- a/arch/nrf5x/drivers/drivers.config
+++ b/arch/nrf5x/drivers/drivers.config
@@ -289,6 +289,7 @@
   desc Enable nRF52 UARTE driver (UART with DMA)
   parent CONFIG_ARCH_NRF5X
   require CONFIG_NRF5X_MODEL>=52000
+  provide CONFIG_DEVICE_START_LOG2INC=2
   depend CONFIG_DEVICE_IOMUX
   depend CONFIG_DEVICE_CHAR
   depend CONFIG_DEVICE_IRQ
