--- a/drivers/valio/Makefile
+++ b/drivers/valio/Makefile
@@ -12,3 +12,4 @@ subdirs-$(CONFIG_DRIVER_PCF8563) += pcf8563
 subdirs-$(CONFIG_DRIVER_DS3231) += ds3231
 subdirs-$(CONFIG_DRIVER_MLX90614) += mlx90614
 subdirs-$(CONFIG_DRIVER_MAX6675) += max6675
+subdirs-$(CONFIG_DRIVER_HTS221) += hts221
