libdevice: Update valio luminosity sensor class

--- a/libdevice/valio.config
+++ b/libdevice/valio.config
@@ -131,15 +131,15 @@
   default 2
 %config end
 
-%config CONFIG_DEVICE_VALIO_LIGHT
-  desc Valio Ambient Light Sensor class enable
+%config CONFIG_DEVICE_VALIO_LUMINOSITY
+  desc Valio Ambient Luminosity Sensor class enable
   parent CONFIG_DEVICE_VALIO
   flags auto
 %config end
 
-%config CONFIG_DEVICE_VALIO_LIGHT_ATTRIBUTE_COUNT
-  desc Valio Ambient Light Sensor class attribute count
-  parent CONFIG_DEVICE_VALIO_LIGHT
+%config CONFIG_DEVICE_VALIO_LUMINOSITY_ATTRIBUTE_COUNT
+  desc Valio Ambient Luminosity Sensor class attribute count
+  parent CONFIG_DEVICE_VALIO_LUMINOSITY
   flags value
   provide CONFIG_DEVICE_VALIO_ATTRIBUTE_ENUM
   default 2
