arch/nrf5x: Rework *ino compatible pinout definitions
Make the definitions and header layout usable across archs.  Thus, we
will be able to define plugin board layouts in a arch-agnostic way.

--- a/arch/nrf5x/board/Makefile
+++ b/arch/nrf5x/board/Makefile
@@ -1,3 +1,5 @@
 ifneq ($(CONFIG_NRF5X_BOARD_NAME),undefined)
 objs += $(CONFIG_NRF5X_BOARD_NAME).o
 endif
+
+objs-$(CONFIG_NRF5X_BOARD_INO_PINOUT) += ino_pinout.o
