arch/nrf5x: Rename arduino standard pinmap

--- a/arch/nrf5x/board/Makefile
+++ b/arch/nrf5x/board/Makefile
@@ -2,4 +2,6 @@ ifneq ($(CONFIG_NRF5X_BOARD_NAME),undefined)
 objs += $(CONFIG_NRF5X_BOARD_NAME).o
 endif
 
-objs-$(CONFIG_NRF5X_BOARD_INO_PINOUT) += ino_pinout.o
+ifneq ($(CONFIG_NRF5X_BOARD_LAYOUT_NAME),undefined)
+objs += $(CONFIG_NRF5X_BOARD_LAYOUT_NAME).o
+endif
