--- a/arch/nrf5x/board/board.config
+++ b/arch/nrf5x/board/board.config
@@ -4,7 +4,8 @@
   flags value
 %config end
 
-%config CONFIG_NRF5X_BOARD_INO_PINOUT
-  desc Enable peripherals as mapped on Arduino layout (SPI, I2C)
+%config CONFIG_NRF5X_BOARD_LAYOUT_NAME
+  desc Enable standard pin mapping
   parent CONFIG_ARCH_NRF5X
+  flags value
 %config end
